// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown parser component renders multiple paragraphs matches the snapshot 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  color="black60"
  ellipsizeMode="tail"
  fontSize={3}
  lineHeight={5}
  maxWidth={280}
  mb={5}
  style={
    Array [
      Object {
        "color": "#666",
        "fontFamily": "AGaramondPro-Regular",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 30,
        "maxWidth": 280,
        "textAlign": "center",
      },
      undefined,
    ]
  }
  textAlign="center"
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    paragraph 1 has some text

paragraph 2 also has text
  </Text>
</Text>
`;

exports[`Markdown parser component renders text matches the snapshot 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  color="black60"
  ellipsizeMode="tail"
  fontSize={3}
  lineHeight={5}
  maxWidth={280}
  mb={5}
  style={
    Array [
      Object {
        "color": "#666",
        "fontFamily": "AGaramondPro-Regular",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 30,
        "maxWidth": 280,
        "textAlign": "center",
      },
      undefined,
    ]
  }
  textAlign="center"
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    text without link
  </Text>
</Text>
`;

exports[`Markdown parser component renders text with link matches the snapshot 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  color="black60"
  ellipsizeMode="tail"
  fontSize={3}
  lineHeight={5}
  maxWidth={280}
  mb={5}
  style={
    Array [
      Object {
        "color": "#666",
        "fontFamily": "AGaramondPro-Regular",
        "fontSize": 16,
        "lineHeight": 24,
        "marginBottom": 30,
        "maxWidth": 280,
        "textAlign": "center",
      },
      undefined,
    ]
  }
  textAlign="center"
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    text with some 
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Array [
          Object {
            "textDecorationLine": "underline",
          },
          undefined,
        ]
      }
    >
      link
    </Text>
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     in it
  </Text>
</Text>
`;
